# AI_Tutor

./: .env.template  .gitignore  README.md  langgraph.json  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
app/: __init__.py  demo.py  main.py  math_tutor_simple.py  models.py  prompts.py  pyproject.toml  test_graph.py  test_math_tutor.py  test_system.py
app/math_services/: main.py
app/math_services/services/: hint_generation.py  node_services.py  proximity_assessment.py  proximity_assessmnet.py  reasoning.py  response_parsing.py  verification.py
app/math_services/tests/: demo_simple_tools.py  demo_tools.py  test_api_responses.py  test_node_functions.py  test_simplified.py
app/math_services/tools/: interactive_tools.py  math_tools.py  tool_integration.py
refactored_app/: graph.py  main.py  nodes.py  prompts.py  state.py  tools.py
simple_app/: app.py  examp.py
